[project]
name = "pythio"
version = "0.0.2"
authors = [
  { name="amirali irvany", email="dev.amirali.irvany@gmail.com" },
]
description = "A library for bot development in Telegram messengers"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/metect/pythio"
Issues = "https://github.com/metect/pythio/issues"
